# bitcoin-quantum-safe

./: .gitignore  CITATION.cff  Cargo.toml  LICENSE  PROOF_OBLIGATIONS.md  README.md  build_extraction.sh  compare_transition_kernel_refinement.py  compare_vectors.py  rust_vectors.json  verify_compiled_refinement.sh  verify_runtime_refinement.sh  verify_sighash_refinement.sh  verify_source_refinement.sh  verify_transition_kernel_refinement.sh  verify_transition_refinement.sh  verify_txid_refinement.sh
.githooks/: pre-commit
.github/workflows/: ci.yml  po8-verification.yml
benches/: ml_dsa_bench.rs
examples/: generate_golden_vectors.rs  generate_runtime_refinement.rs  generate_sighash_refinement.rs  generate_transition_kernel_refinement.rs  generate_transition_refinement.rs  generate_txid_refinement.rs  generate_varint_refinement.rs  generate_witness_refinement.rs
formal/coq/extraction/: ExtractSighashVectors.v  ExtractTransitionVectors.v  ExtractTxidVectors.v  ExtractWitnessVectors.v  README.md  SighashExtraction.v  TransitionExtraction.v  TxidExtraction.v  WitnessExtraction.v  WitnessExtraction.v.bak  coq_vectors.json  dune  golden_vectors  golden_vectors.cmi  golden_vectors.cmo  golden_vectors.ml  golden_vectors.ml.bak  golden_vectors_embedded.json  sighash_refinement.ml  transition_kernel_refinement.ml  transition_refinement.ml  txid_refinement.ml  varint_refinement.ml  witness_refinement.ml
models/: invariants.md  state-machine.md
paper/: Makefile  main.tex  refs.bib
src/: encoding.rs  freeze.rs  kani_proofs.rs  lib.rs  migration.rs  params.rs  sighash.rs  spend_pred.rs  transition_core.rs  types.rs  weight.rs
tests/: integration.rs  po8_golden_vectors.rs
(+18 files in other folders)
