[package]
name = "pq-witness-protocol"
version = "0.1.0"
edition = "2021"
description = "Bitcoin Post-Quantum Witness Protocol — SegWit v2 with ML-DSA-44 signatures"
license = "MIT"

[dependencies]
sha2 = "0.10"
fips204 = { version = "0.4", default-features = false, features = ["ml-dsa-44", "default-rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
proptest = "1.4"
criterion = "0.5"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[[bench]]
name = "ml_dsa_bench"
harness = false

[[example]]
name = "generate_golden_vectors"

[[example]]
name = "generate_varint_refinement"

[[example]]
name = "generate_witness_refinement"

[[example]]
name = "generate_sighash_refinement"

[[example]]
name = "generate_transition_refinement"
