(executable
 (name golden_vectors)
 (modules golden_vectors golden_vectors_extracted)
 (flags (:standard -w -27-32-33-39))
)

(executable
 (name varint_refinement)
 (modules varint_refinement golden_vectors_extracted)
 (flags (:standard -w -27-32-33-39))
)

(executable
 (name witness_refinement)
 (modules witness_refinement golden_vectors_extracted)
 (flags (:standard -w -27-32-33-39))
)
